<resources>
    <string name="app_name">Reweyou</string>
    <string name="action_profile">Profile</string>
    <string name="action_feed">&#xf030; Feed</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="tab_1">News</string>
    <string name="tab_2">My City</string>
    <string name="tab_3">Notifications</string>
    <string name="tab_4">Trending</string>
    <string name="tab_5">Reading</string>

    <string-array name="tabs">
        <item>@string/tab_1</item>
        <item>@string/tab_4</item>
        <item>@string/tab_5</item>
    </string-array>

    <string name="tab_8">POST</string>
    <string name="tab_9">Reactions</string>

    <string-array name="tabs_single_activity">
        <item>@string/tab_8</item>
        <item>@string/tab_9</item>
    </string-array>


    <string name="action_logout">Delete Account</string>
    <string name="action_help">Mail Feedback</string>
    <string name="screen1_title">Screen1</string>
    <string name="screen1_desc">Screen1.1</string>
    <string name="screen2_title">Screen2</string>
    <string name="screen2_desc">Screen2.2</string>
    <string name="screen3_title">Screen3</string>
    <string name="screen3_desc">Screen3.3</string>
    <string name="test">&#xf030;</string>
    <string name="login">Log In</string>
    <string name="Image">Delete</string>

    <string name="camera">&#xf083;</string>
    <string name="sharebutton">&#xf064;</string>
    <string name="pen">&#xf040;</string>
    <string name="gallery">&#xf1c5;</string>
    <string name="stop">&#xf111;</string>
    <string name="send">&#xf1d9;</string>
    <string name="location">&#xf192;</string>
    <string name="search_hint">Search MP by constituency</string>
    <string name="pause">&#xf04c;</string>
    <string name="home">&#xf015;</string>
    <string name="flash">&#xf0e7;</string>
    <string name="play">&#xf04b;</string>
    <string name="share">&#xf1e0;</string>
    <string name="switch_camera">&#xf021;</string>
    <string name="action_settings">Settings</string>
    <string name="videohint">&#xf144;</string>
    <string name="action_users">Users</string>
    <string name="action_notifications">Notifications</string>
    <string name="confirm_logout">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">No</string>
    <string name="action_leaderboard">Leaderboard</string>


    <string name="no_permissions">This app requires the Location permission to run.</string>
    <string name="sms_permissions">This app requires the SMS permission for OTP.</string>
    <string name="settings">Settings</string>
    <string name="help">Permission denied</string>
    <string name="string_help_text">In order to verify your number, otp will be send to your phone. Grant Reweyou the permission to read and receive messages or else enter the otp manually.</string>
    <string name="quit">Deny</string>
    <string name="actions">Actions</string>
    <string name="Select">Select Category</string>

    <string-array name="brew_array">
        <item>Select Category</item>
        <item>Issues</item>
        <item>National</item>
        <item>International</item>
        <item>Sports</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Social Media</item>
        <item>Opinion</item>
    </string-array>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="server_registered">Successfully registered on server</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="gcm_unregister_message">Token unsubscribed from GCM and notification server. You will no longer
    get any notification.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="unregistering_message">Un-registering Notification Service...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server. Please refresh.</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="takepic">Camera</string>
    <string name="opengallery">Gallery</string>
    <string name="emptyStatus">Add your status here</string>
    <string name="emptyStatusHint">Your Status</string>
    <string name="takevideo">Shoot video</string>
    <string name="title_activity_raw">Raw</string>
    <string name="shootVideo">Shoot Video</string>
    <string name="title_activity_nav">NavA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_single_post_acitivty">SinglePostAcitivty</string>
    <string name="permission_required">Reweyou will be verifying your mobile number. In order to read the otp automatically, allow the sms read permission to the app.</string>
    <string name="permission_required_location">Posting a report requires the location to be turned on.</string>
    <string name="permission_denied">Allow Reweyou the sms read permission or else enter the otp manually</string>
    <string name="permission_denied_location">Cannot post a report without a location. Grant location permission from settings in order to upload.</string>
    <string name="permission_required_image">Allow Reweyou to access your storage in order to upload a media.</string>
    <string name="permission_denied_image">Grant Reweyou the access to storage in order to attach a media in a report</string>
    <string name="title_activity_video_display">VideoDisplay</string>

</resources>
