<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tabsHeight">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/tab_1"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"
            android:background="@android:color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/re"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/tab_2"
        android:textColor="@android:color/white" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/tab_3"
        android:textColor="@android:color/white" />
</LinearLayout>