<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Click a Review"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/captureImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textColor="#e74c3c"
        android:text="@string/stop"
        android:background="#ffffff" />
    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/feed"
        android:layout_alignParentRight="false"
        android:background="#00ffffff"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="#fff"
        android:text="@string/home"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/flash"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/flash"
        android:textSize="30sp"
        android:textColor="#fff"
        android:background="#00ffffff"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/flipCamera"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_camera"
        android:textSize="30sp"
        android:textColor="#fff"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/flash"/>
    <Button
        android:id="@+id/video"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/pen"
        android:textSize="30sp"
        android:textColor="#fff"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/flipCamera"/>


    <ImageButton
        android:id="@+id/ibRetake"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="Retake"
        android:visibility="gone"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:src="@drawable/ic_newspaper_white" />

    <ImageButton
        android:id="@+id/ibUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:src="@drawable/ic_map_marker_radius_white" />

</RelativeLayout> 